test/classes/subclasses/invalid-qualified-inherit.nodyno.good
invalid-qualified-inherit.chpl:5: error: only simple inheritance expressions are supported without Dyno scope resolution
