test/classes/subclasses/invalid-qualified-inherit.chpl
module Other {
  class CC {}
}
module M {
  class C: Other.CC {}

  proc main() {

  }
}
